@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+22-Jun-2010 Andrew Eddie
+ # Fixed issue [#20971] Add getCaching method (Klas Berlič1).
+ 
 21-Jun-2010 Mark Dexter
 # Beez template fixes (Angie Radke)
 
